Rename app to WCAG Audit Pipeline

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const vercelCommit = vercelSha ? vercelSha.slice(0, 7) : undefined;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Stark Report Consolidator</title>
+		<title>WCAG Audit Pipeline</title>
 	</head>
 	<body>
 		<StarkConsolidator client:load />
